fix(worker-display-style): Fix buttons shifting their active area from under cursor when pressed

--- a/app/scss/worker-display.scss
+++ b/app/scss/worker-display.scss
@@ -2,16 +2,9 @@
 		
 	font-size: 1.1rem;
 	font-family: monospace;
-
-	@mixin hover-active {
-		&:hover {
-			background: #f3eeee;
-		}
-		
-		&:active {
-			transform: translateY(2px);
-		}
-	}
+	
+	$active-displace: 2px;
+	$hover-background: #f3eeee;
 	
 	button {
 		background: none;
@@ -21,8 +14,18 @@
 		padding: 0;
 		margin: 0;
 		font-family: inherit;
+		margin-top: $active-displace + 1;
+		
+		&:active {
+			transform: translateY($active-displace);
+			margin-top: 0;
+			border-top: $active-displace + 1 solid transparent;
+		}
 
-		@include hover-active;
+		&:hover {
+			background: $hover-background;
+			background-clip: padding-box;
+		}
 		
 		&:focus {
 			outline: none;
